--- a/CAPSTONE_TEAM01_2024/Views/Shared/_PersonnelLayout.cshtml
+++ b/CAPSTONE_TEAM01_2024/Views/Shared/_PersonnelLayout.cshtml
@@ -171,7 +171,7 @@
                 </div>
             </nav>
             <!--View's Contents-->
-            <main class="col-md-9 ms-sm-auto col-lg-10 content p-0 m-0" id="main-content">
+            <main class="col-md-9 ms-sm-auto col-lg-10 content p-0 m-0" id="main-content" style="position: relative">
                 @RenderBody()
             </main>
         </div>
