Update slide bar, css

--- a/CAPSTONE_TEAM01_2024/Views/Shared/_PersonnelLayout.cshtml
+++ b/CAPSTONE_TEAM01_2024/Views/Shared/_PersonnelLayout.cshtml
@@ -90,39 +90,31 @@
                             </ul>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" role="button" aria-expanded="false" aria-controls="dropdownMenu3" id="toggleMenu3"
-                               data-bs-toggle="collapse" data-bs-target="#dropdownMenu3"
+                            <a class="nav-link" role="button" aria-expanded="false" aria-controls="dropdownMenu4" id="toggleMenu4"
                                onmouseover="this.style.backgroundColor='#c82333'; this.style.color='#fff';"
                                onmouseout="this.style.backgroundColor='transparent'; this.style.color='#fff';">
-                                <i class="bi bi-exclamation-circle"></i> THÔNG BÁO 
-                                <span id="announcementCount" class="badge rounded-pill bg-danger" style="display:none;"></span>
-                                <i class="bi bi-caret-down-fill" style="float:right;"></i>
+                                <i class="bi bi-activity"></i> HOẠT ĐỘNG <i class="bi bi-caret-down-fill" style="float:right;"></i>
                             </a>
-                            <ul class="collapse" id="dropdownMenu3" style="list-style-type: none; padding-left: 35px;">
+                            <ul class="collapse" id="dropdownMenu4" style="list-style-type: none; padding-left: 35px;">
                                 <li>
-                                    <a class="dropdown-item" href="/Announcement/AnnouncementList" id="linkAnnouncement" style="text-decoration:none; color: #fff; font-size:1.2rem; font-weight:bold;"
+                                    <a class="dropdown-item" href="/Categories/SemesterPlan" id="linkSemesterPlan" style="text-decoration:none; color: #fff; font-size:1.2rem; font-weight:bold;"
                                        onmouseover="this.style.backgroundColor='#c82333'; this.style.color='#fff';"
                                        onmouseout="this.style.backgroundColor='transparent'; this.style.color='#fff';">
-                                        <i class="bi bi-journal-text"></i> Danh Sách <span id="totalAnnouncementCount" class="badge rounded-pill bg-danger " style="display:none;"></span>
+                                        <i class="bi bi-book"></i> Kế Hoạch
                                     </a>
                                 </li>
                                 <li>
-                                    <a class="dropdown-item" href="/Announcement/MyAnnouncements" id="linkMyAnnouncement" style="text-decoration:none; color: #fff; font-size:1.2rem; font-weight:bold;"
+                                    <a class="dropdown-item" href="/Categories/EndSemesterReport" id="linkEndSemesterReport" style="text-decoration:none; color: #fff; font-size:1.2rem; font-weight:bold;"
                                        onmouseover="this.style.backgroundColor='#c82333'; this.style.color='#fff';"
                                        onmouseout="this.style.backgroundColor='transparent'; this.style.color='#fff';">
-                                        <i class="bi bi-person-badge"></i> Của Tôi <span id="myAnnouncementCount" class="badge rounded-pill bg-danger " style="display:none;"></span>
+                                        <i class="bi bi-file-earmark-text"></i> Báo Cáo
                                     </a>
                                 </li>
                             </ul>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="/Statistics/ShowStatistics" id="linkStatistics" style="text-decoration:none;"
-                               onmouseover="this.style.backgroundColor='#c82333'; this.style.color='#fff';"
-                               onmouseout="this.style.backgroundColor='transparent'; this.style.color='#fff';">
-                                <i class="bi bi-graph-up"></i> THỐNG KÊ
-                            </a>
-                        </li>
-                      
+                       
+
+
                         <li class="nav-item">
                             <a class="nav-link" role="button" aria-expanded="false" aria-controls="dropdownMenu2" id="toggleMenu2"
                                onmouseover="this.style.backgroundColor='#c82333'; this.style.color='#fff';"
@@ -151,21 +143,41 @@
                                         <i class="bi bi-person-lines-fill"></i>  Sinh Viên
                                     </a>
                                 </li>
+
+                            </ul>
+                        <li class="nav-item">
+                            <a class="nav-link" role="button" aria-expanded="false" aria-controls="dropdownMenu3" id="toggleMenu3"
+                               data-bs-toggle="collapse" data-bs-target="#dropdownMenu3"
+                               onmouseover="this.style.backgroundColor='#c82333'; this.style.color='#fff';"
+                               onmouseout="this.style.backgroundColor='transparent'; this.style.color='#fff';">
+                                <i class="bi bi-exclamation-circle"></i> THÔNG BÁO
+                                <span id="announcementCount" class="badge rounded-pill bg-danger" style="display:none;"></span>
+                                <i class="bi bi-caret-down-fill" style="float:right;"></i>
+                            </a>
+                            <ul class="collapse" id="dropdownMenu3" style="list-style-type: none; padding-left: 35px;">
                                 <li>
-                                    <a class="dropdown-item" href="/Categories/SemesterPlan" id="linkSemesterPlan" style="text-decoration:none; color: #fff; font-size:1.2rem; font-weight:bold;"
+                                    <a class="dropdown-item" href="/Announcement/AnnouncementList" id="linkAnnouncement" style="text-decoration:none; color: #fff; font-size:1.2rem; font-weight:bold;"
                                        onmouseover="this.style.backgroundColor='#c82333'; this.style.color='#fff';"
                                        onmouseout="this.style.backgroundColor='transparent'; this.style.color='#fff';">
-                                        <i class="bi bi-book"></i> Kế Hoạch
+                                        <i class="bi bi-journal-text"></i> Danh Sách <span id="totalAnnouncementCount" class="badge rounded-pill bg-danger " style="display:none;"></span>
                                     </a>
                                 </li>
                                 <li>
-                                    <a class="dropdown-item" href="/Categories/EndSemesterReport" id="linkEndSemesterReport" style="text-decoration:none; color: #fff; font-size:1.2rem; font-weight:bold;"
+                                    <a class="dropdown-item" href="/Announcement/MyAnnouncements" id="linkMyAnnouncement" style="text-decoration:none; color: #fff; font-size:1.2rem; font-weight:bold;"
                                        onmouseover="this.style.backgroundColor='#c82333'; this.style.color='#fff';"
                                        onmouseout="this.style.backgroundColor='transparent'; this.style.color='#fff';">
-                                        <i class="bi bi-file-earmark-text"></i> Báo Cáo
+                                        <i class="bi bi-person-badge"></i> Của Tôi <span id="myAnnouncementCount" class="badge rounded-pill bg-danger " style="display:none;"></span>
                                     </a>
                                 </li>
                             </ul>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="/Statistics/ShowStatistics" id="linkStatistics" style="text-decoration:none;"
+                               onmouseover="this.style.backgroundColor='#c82333'; this.style.color='#fff';"
+                               onmouseout="this.style.backgroundColor='transparent'; this.style.color='#fff';">
+                                <i class="bi bi-graph-up"></i> THỐNG KÊ
+                            </a>
+                        </li>
                         </li>
                     </ul>
                 </div>
@@ -221,7 +233,7 @@
             }
 
             // Load dropdown state from session storage
-            const dropdownMenus = ['dropdownMenu1', 'dropdownMenu2', 'dropdownMenu3'];
+            const dropdownMenus = ['dropdownMenu1', 'dropdownMenu2', 'dropdownMenu3', 'dropdownMenu4'];
             dropdownMenus.forEach(menuId => {
                 const menuState = sessionStorage.getItem(menuId);
                 const menu = document.getElementById(menuId);
