--- a/CAPSTONE_TEAM01_2024/Views/Shared/_StudentLayout.cshtml.css
+++ b/CAPSTONE_TEAM01_2024/Views/Shared/_StudentLayout.cshtml.css
@@ -43,18 +43,19 @@
     background-image: url('https://kientruc.vlu.edu.vn/storage/app/media/moi-truong-hoc-tap/co_so_1.png');
     background-size: cover;
     background-position: center;
-    opacity: 0.7;
+    background-color: rgba(0, 0, 0, 0.3); /* Nền sáng hơn */
     color: #fff;
     height: 100vh;
     padding: 20px;
     position: sticky;
     top: 0;
     font-size: 1.1rem;
-    border-radius:  0;
-    box-shadow: 2px 0 5px rgba(0, 0, 0, 0.1);
+    border-radius: 0;
+    box-shadow: 2px 0 10px rgba(255, 255, 255, 0.2), 2px 0 5px rgba(0, 0, 0, 0.1); /* Đổ bóng sáng hơn */
     margin-right: 0;
     overflow-y: auto;
 }
+
 
     .sidebar .nav-link {
         color: #fff;
